components/flags_ui/resources/flags.css
/* ... */
#promos {
  color: var(--secondary-color);
  font-size: .875rem;
}

button:not(.primary) {
  background: none;
  border: 1px solid var(--google-grey-300);
  border-radius: 3px;
  color: var(--google-blue-600);
  font-size: .8125rem;
  padding: 8px 12px;
}

@media (prefers-color-scheme: dark) {
  button:not(.primary) {
    border-color: var(--google-grey-700);
    color: var(--google-blue-300);
  }
}

button:not(.primary):hover {
  background: rgba(var(--google-blue-500-rgb), .04);
}

@media (prefers-color-scheme: dark) {
  button:not(.primary):hover {
    background: rgba(var(--google-blue-300-rgb), .08);
  }
}

.experiment {
  color: var(--secondary-color);
  line-height: 1.45;
  width: 100%;
}

.experiment .flex-container {
  padding: 0.8em 4px 16px 0;
}

.experiment .flex-container .flex:first-child {
  box-sizing: border-box;
  max-width: 540px;
  padding-inline-end: 8px;
}

.experiment p {
  margin: .2em 0;
}

.experiment-name {
  color: var(--primary-color);
  display: inline-block;
  font-size: .8125rem;
  font-weight: 500;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.experiment-switched .experiment-name::before {
  --end-margin: 4px;
  --width: 12px;
  color: var(--interactive-color);
  content: '•';
  display: inline-block;
  font-size: 40px;
  line-height: 0;
  margin-inline-end: var(--end-margin);
  margin-inline-start: calc(-1 * var(--end-margin) - var(--width));
  vertical-align: middle;
  width: var(--width);
}


.match,
.referenced h2 {
  /* This UI is intentionally the same in light and dark mode. */
  background: yellow;
  color: var(--google-grey-900);
}

.experiment-actions {
  flex: 0 0 auto;
  padding-inline-start: 5px;
  text-align: right; /* csschecker-disable-line left-right */
  width: 150px;
}

.experiment-origin-list-value {
  resize: none;
}

select {
  background: white;
  border: 1px solid var(--link-color);
  color: var(--link-color);
  font-size: .8125rem;
  height: 1.625rem;
  letter-spacing: .01em;
  max-width: 150px;
  text-align-last: center;
  width: 100%;
}

@media (prefers-color-scheme: dark) {
  select {
    background: var(--input-background);
    border: none;
    color: var(--primary-color);
  }

  option {
    background: var(--toolbar-color);
  }
}

textarea {
  background: var(--input-background);
  border-radius: 3px;
  box-sizing: border-box;
  color: inherit;
  font-size: .8125rem;
  margin: 0;
  min-height: 3em;
  padding: 8px;
  width: 100%;
}

@media (prefers-color-scheme: dark) {
  textarea {
    border: 1px solid var(--secondary-color);
  }
}

.experiment-switched select {
  background: var(--link-color);
  color: white;
}

@media (prefers-color-scheme: dark) {
  .experiment-switched select {
    color: var(--google-grey-900);
  }

  .experiment-switched option {
    background: inherit;
    color: inherit;
  }
}

.experiment-no-match {
  display: none;
  position: absolute;
}

.permalink {
  color: var(--secondary-color);
}

.tabs {
  display: flex;
  width: 100%;
}

.tab {
  color: var(--secondary-color);
  cursor: pointer;
  display: block;
  flex: 1;
  font-size: 1rem;
  font-weight: normal;
  padding: 14px 21px;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: color 200ms var(--ease-in-out);
  user-select: none;
  width: 50%;
  z-index: 1;
}

.tab::before {
  background: currentColor;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  left: 0;
  position: absolute;
  transition: height 200ms var(--ease-in-out);
  width: 100%;
}

.tabs .tab.selected,
.tabs .tab.selected:focus {
  color: var(--interactive-color);
}

.tabs .tab.selected::before,
.tabs .tab.selected:focus::before {
  height: 2px;
}

html:not(.focus-outline-visible) .tab:focus {
  outline: 0;
}

.tab-content {
  display: none;
  line-height: 25px;
  /* Bottom padding should be greater than evaluated height of needs-restart */
  padding-bottom: 100px;
  position: relative;
}

.tab-content.selected,
.tab-content.selected .template {
  display: block;
}

/* Restart tray. */
#needs-restart {
  background: var(--toolbar-color);
  bottom: 0;
  box-shadow: 0 -2px 2px 0 var(--shadow-color);
  box-sizing: border-box;
  left: 0;
  opacity: 0;
  padding: 16px;
  position: fixed;
  transform: translateY(300px);
  transition: all 225ms var(--ease-in-out);
  width: 100%;
  z-index: 10;
}

#needs-restart .flex:last-child {
  text-align: right; /* csschecker-disable-line left-right */
}

#needs-restart.show {
  opacity: 1;
  transform: translate(0);
}

.no-match {
  margin-top: 75px;
}

.restart-notice {
  font-size: .9375rem;
  line-height: 1.4;
}

button.primary {
  background: var(--link-color);
  border: 0;
  border-radius: 3px;
  color: white;
  font-size: .875rem;
  padding: 14px 38px;
}

@media (prefers-color-scheme: dark) {
  button.primary {
    color: var(--google-grey-900);
  }
}

button.primary:-webkit-any(:active, :hover) {
  background: var(--google-blue-600);
}

#version {
  color: var(--secondary-color);
  text-align: right; /* csschecker-disable-line left-right */
}

#os-flags-link-container {
  background-image: url(chrome://resources/images/os_flags_app_icon.svg);
}

@media (max-width: 360px) {
  #experiment-reset-all {
    font-size: .65rem;
    padding: 2px 8px;
  }

  #flagsTemplate > .flex-container {
    flex-direction: column;
  }

  #version {
    text-align: initial;
  }

  button.primary {
    padding: 8px;
  }

  #search {
    padding: 8px 36px;
  }
}
/* ... */

