Flags UI: Fix alignment of blue dot indicator to not depend on font.
Previously the alignment logic relied on the page using Roboto on all
platforms, which is no longer the case. Changing to a different
implementation (border-radius), which does not rely on the current font,
and therefore works on all platforms.

Bug: 1449688
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4575748
Commit-Queue: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1151017}

--- a/components/flags_ui/resources/flags.css
+++ b/components/flags_ui/resources/flags.css
@@ -315,16 +315,15 @@ button:not(.primary):hover {
 
 .experiment-switched .experiment-name::before {
   --end-margin: 4px;
-  --width: 12px;
-  color: var(--interactive-color);
-  content: '•';
+  --diameter: 10px;
+  background-color: var(--interactive-color);
+  border-radius: 50%;
+  content: '';
   display: inline-block;
-  font-size: 40px;
-  line-height: 0;
+  height: var(--diameter);
   margin-inline-end: var(--end-margin);
-  margin-inline-start: calc(-1 * var(--end-margin) - var(--width));
-  vertical-align: middle;
-  width: var(--width);
+  margin-inline-start: calc(-1 * var(--end-margin) - var(--diameter));
+  width: var(--diameter);
 }
 
 
